done promo and advantages

--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,82 @@
 </head>
 <body>
 
-   <h1>DONE! Let's do it!
-   </h1>
+    <!-- begin promo -->
+    <div class="promo">
+        <div class="container">
+            <header class="header">
+                <a href="#" class="header__logo">
+                    <img src="/img/logo.png" alt="Логотип">
+                </a>
+                <div class="header__official">
+                    Официальный представитель
+                    <span>Garmin, Polar, Suunto</span>
+                </div>
+                <div class="header__contacts">
+                    <a href="tel:74999228974" class="header__phone">+7 (499) 922-89-74</a>
+                    <button class="btn">заказать звонок</button>
+                </div>
+            </header>
 
+            <div class="promo__wrap">
+                <h1 class="promo__title">Подбор пульсометра</h1>
+                <h2 class="promo__subtitle">с учётом Вашего уровня подготовки</h2>
+
+                <div class="promo__icons">
+                    <div class="promo__icon">
+                        <img src="/img/icons/icon-time.png" alt="Время подбора">
+                        Время подбора: 10 минут
+                    </div>
+                    <div class="promo__icon">
+                        <img src="/img/icons/icon-bag.png" alt="Доставка">
+                        Бесплатная доставка
+                    </div>
+                    <div class="promo__icon">
+                        <img src="/img/icons/icon-msg.png" alt="Ответы">
+                        Ответим на все вопросы
+                    </div>
+                </div>
+
+                <button class="btn btn_main">заказать консультацию</button>
+                 <div class="promo__link">
+                    или <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end promo -->
+
+    <!-- begin advantages -->
+    <div class="advantages">
+        <div class="container">
+            <h2 class="advantages__title">
+                НАШИ ПРЕИМУЩЕСТВА
+            </h2>
+            <div class="advantages__items">
+                <div class="advantages__item">
+                    <img src="/img/icons/icon-cup.png" alt="cup">
+                    <div class="advantages__header">Делимся опытом</div>
+                    <div class="advantages__text">Наши сотрудники всегда готовы <br> поделиться своим опытом,<br>
+                    так как сами бегают полумарафоны,<br> переплыли Босфор, готовятся к<br> соревнованиям по триатлону!</div>
+                </div>
+                <div class="advantages__item">
+                    <img src="/img/icons/icon-heart.png" alt="heart">
+                     <div class="advantages__header">Заботимся о здоровье</div>
+                    <div class="advantages__text">Мы работаем для того,<br>
+                    чтобы Ваши занятия спортом шли на<br> пользу Вашему здоровью и были в<br> радость Вам и Вашим близким!</div>
+                </div>
+                <div class="advantages__item">
+                    <img src="/img/icons/icon-shoe.png" alt="shoe">
+                    <div class="advantages__header">Учим бегать</div>
+                    <div class="advantages__text">Помогаем с обучением<br>
+                    правильной технике бега!<br>
+                    Дружим с крупнейшей школой бега в<br> России - <a href="#" class="advantages__link">I LOVE RUNNING.</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end advantages -->
+    
 
     <script src="js/scripts.js"></script>
 </body>
