--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
     <!-- begin advantages -->
     <div class="advantages">
         <div class="container">
-            <h2 class="advantages__title">
+            <h2 class="title title_advantages">
                 НАШИ ПРЕИМУЩЕСТВА
             </h2>
             <div class="advantages__items">
@@ -93,6 +93,26 @@
     </div>
     <!-- end advantages -->
     
+    <!-- begin consultation -->
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_consultation">
+                Получите бесплатную консультацию <br>
+                по подбору пульсометра
+            </h2>
+            <div class="consultation__desc">
+                Просто заполните форму заявки <br>
+                и мы перезвоним вам в течении 10 минут
+            </div>
+            <form class="feed-form" action="" method="POST">
+                <input required name="name" type="text" placeholder="Ваше имя">
+                <input required name="phone" type="phone" placeholder="Ваше телефон">
+                <input required name="email" type="email" placeholder="Ваше E-mail">
+                <button class="btn btn_consultation" type="submit">заказать консультацию</button>
+            </form>
+        </div>
+    </div>
+    <!-- end consultation -->
 
     <script src="js/scripts.js"></script>
 </body>
