--- a/src/index.html
+++ b/src/index.html
@@ -114,6 +114,27 @@
     </div>
     <!-- end consultation -->
 
+    <!-- begin carusel -->
+    <div class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div>
+                    <img src="img/slide-1.jpg" alt="slide 1">
+                </div>
+                <div>
+                    <img src="img/slide-2.jpg" alt="slide 2">
+                </div>
+                <div>
+                    <img src="img/slide-3.jpg" alt=" slide 3">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end carusel -->
+ 
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="js/slick.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
