--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -7,6 +7,7 @@
     @@include('../sections/consultation.html')
     @@include('../sections/carusel.html')
     @@include('../sections/catalog.html')
+    @@include('../sections/feedback.html')
 
 
 
