--- a/src/html/sections/footer.html
+++ b/src/html/sections/footer.html
@@ -1,4 +1,26 @@
 
+<!-- begin footer -->
+<footer class="footer">
+    <div class="footer__map">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.430481195993!2d37.64480731542677!3d55.76839498055752!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2sMyasnitskiy%20Proyezd%2C%204%2F3%2C%20Moskva%2C%20Russia%2C%20107078!5e0!3m2!1sen!2sua!4v1591892064528!5m2!1sen!2sua"
+            width="100%" height="638" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+            tabindex="0">
+        </iframe>
+    </div>
+    <div class="footer__info">
+        <address class="footer__adr">Москва, Мясницкий проезд, д.3с1</address>
+        <a href="tel:84999228974" class="footer__phone">8 (499) 922-89-74</a>
+        <div class="footer__social">
+            <a href="" class="footer__social-item"><img src="img/icons/fb.svg" alt="facebook"></a>
+            <a href="" class="footer__social-item"><img src="img/icons/inst.svg" alt="instagram"></a>
+            <a href="" class="footer__social-item"><img src="img/icons/pint.svg" alt="pinterest"></a>
+        </div>
+    </div>
+</footer>
+<!-- end footer -->
+
+
 </div>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
