modal window dona

--- a/src/html/sections/catalog.html
+++ b/src/html/sections/catalog.html
@@ -1,5 +1,5 @@
 <!-- begin catalog -->
-<div class="catalog">
+<div class="catalog" id="catalog">
     <div class="container">
         <h2 class="title">Каталог пульсометров</h2>
 
@@ -41,7 +41,7 @@
                         <div class="catalog-item__old-price">4 750 руб.</div>
                         <div class="catalog-item__price">4 500 руб.</div>
                     </div>
-                    <button class="btn btn_catalog-item">КУПИТЬ</button>
+                    <button data-modal="order" class="btn btn_catalog-item">КУПИТЬ</button>
                 </div>
             </div>
             <div class="catalog-item">
@@ -69,7 +69,7 @@
                         <div class="catalog-item__old-price">4 750 руб.</div>
                         <div class="catalog-item__price">4 500 руб.</div>
                     </div>
-                    <button class="btn btn_catalog-item">КУПИТЬ</button>
+                    <button data-modal="order" class="btn btn_catalog-item">КУПИТЬ</button>
                 </div>
             </div>
             <div class="catalog-item">
@@ -97,7 +97,7 @@
                         <div class="catalog-item__old-price">4 750 руб.</div>
                         <div class="catalog-item__price">4 500 руб.</div>
                     </div>
-                    <button class="btn btn_catalog-item">КУПИТЬ</button>
+                    <button data-modal="order" class="btn btn_catalog-item">КУПИТЬ</button>
                 </div>
             </div>
             <div class="catalog-item">
@@ -125,7 +125,7 @@
                         <div class="catalog-item__old-price">4 750 руб.</div>
                         <div class="catalog-item__price">4 500 руб.</div>
                     </div>
-                    <button class="btn btn_catalog-item">КУПИТЬ</button>
+                    <button data-modal="order" class="btn btn_catalog-item">КУПИТЬ</button>
                 </div>
             </div>
             <div class="catalog-item">
@@ -153,7 +153,7 @@
                         <div class="catalog-item__old-price">4 750 руб.</div>
                         <div class="catalog-item__price">4 500 руб.</div>
                     </div>
-                    <button class="btn btn_catalog-item">КУПИТЬ</button>
+                    <button data-modal="order" class="btn btn_catalog-item">КУПИТЬ</button>
                 </div>
             </div>
             <div class="catalog-item">
@@ -181,7 +181,7 @@
                         <div class="catalog-item__old-price">4 750 руб.</div>
                         <div class="catalog-item__price">4 500 руб.</div>
                     </div>
-                    <button class="btn btn_catalog-item">КУПИТЬ</button>
+                    <button data-modal="order" class="btn btn_catalog-item">КУПИТЬ</button>
                 </div>
             </div>
         </div>
@@ -211,7 +211,7 @@
                         <div class="catalog-item__old-price">4 750 руб.</div>
                         <div class="catalog-item__price">4 500 руб.</div>
                     </div>
-                    <button class="btn btn_catalog-item">КУПИТЬ</button>
+                    <button data-modal="order" class="btn btn_catalog-item">КУПИТЬ</button>
                 </div>
             </div>
             <div class="catalog-item">
@@ -241,7 +241,7 @@
                         <div class="catalog-item__old-price">4 750 руб.</div>
                         <div class="catalog-item__price">4 500 руб.</div>
                     </div>
-                    <button class="btn btn_catalog-item">КУПИТЬ</button>
+                    <button data-modal="order" class="btn btn_catalog-item">КУПИТЬ</button>
                 </div>
             </div>
             <div class="catalog-item">
@@ -269,7 +269,7 @@
                         <div class="catalog-item__old-price">4 750 руб.</div>
                         <div class="catalog-item__price">4 500 руб.</div>
                     </div>
-                    <button class="btn btn_catalog-item">КУПИТЬ</button>
+                    <button data-modal="order" class="btn btn_catalog-item">КУПИТЬ</button>
                 </div>
             </div>
         </div>
@@ -299,7 +299,7 @@
                             <div class="catalog-item__old-price">4 750 руб.</div>
                             <div class="catalog-item__price">4 500 руб.</div>
                         </div>
-                        <button class="btn btn_catalog-item">КУПИТЬ</button>
+                        <button data-modal="order" class="btn btn_catalog-item">КУПИТЬ</button>
                     </div>
                 </div>
             </div>
