--- a/src/html/sections/consultation.html
+++ b/src/html/sections/consultation.html
@@ -13,7 +13,7 @@
             <input required name="name" type="text" placeholder="Ваше имя">
             <input required name="phone" type="phone" placeholder="Ваше телефон">
             <input required name="email" type="email" placeholder="Ваше E-mail">
-            <button class="btn btn_consultation" type="submit">заказать консультацию</button>
+            <button data-modal="consultation" class="btn btn_consultation" type="submit">заказать консультацию</button>
         </form>
     </div>
 </div>
