--- a/src/html/sections/promo.html
+++ b/src/html/sections/promo.html
@@ -11,7 +11,7 @@
             </div>
             <div class="header__contacts">
                 <a href="tel:74999228974" class="header__phone">+7 (499) 922-89-74</a>
-                <button class="btn">заказать звонок</button>
+                <button data-modal="consultation" class="btn">заказать звонок</button>
             </div>
         </header>
 
@@ -34,9 +34,9 @@
                 </div>
             </div>
 
-            <button class="btn btn_main">заказать консультацию</button>
+            <button data-modal="consultation" class="btn btn_main">заказать консультацию</button>
             <div class="promo__link">
-                или <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                или <a href="#catalog">ПЕРЕЙТИ В КАТАЛОГ</a>
             </div>
         </div>
     </div>
