--- a/src/html/sections/footer.html
+++ b/src/html/sections/footer.html
@@ -20,7 +20,7 @@
 </footer>
 <!-- end footer -->
 
-
+@@include('../sections/modal.html')
 </div>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
